[tool.poetry]
name = "innotter_stats"
version = "0.1.0"
description = ""
authors = ["Sheshkon <sheskoalexei@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pika = "^1.3.0"
docker = "^5.0.3"
python-dotenv = "^0.20.0"
PyJWT = "^2.4.0"
aioboto3 = "^9.6.0"
aio-pika = "^8.1.0"
celery = "^5.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
